--- a/Latent-FrontEnd/src/index.css
+++ b/Latent-FrontEnd/src/index.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  max-width: 1400px;
+  margin-inline: auto;
+}
+
 /* Active Navigation Link */
 
 .smooth-transition {
