--- a/Latent-FrontEnd/src/index.css
+++ b/Latent-FrontEnd/src/index.css
@@ -28,3 +28,33 @@ body {
 linearGradient {
   background: linear-gradient(91deg, #F7F7FD 0%, rgba(255, 255, 255, 0.00) 100%);
 }
+
+/* swiper related */
+
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+
+  /* Center slide text vertically */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  /* display: block; */
+  /* width: 100%; */
+  /* height: 100%; */
+  /* object-fit: cover; */
+}
+
+.swiper-button-next::after,
+.swiper-button-prev::after {
+  color: green;
+}
