add a slider to testimonials div on landing page

--- a/Latent-FrontEnd/src/index.css
+++ b/Latent-FrontEnd/src/index.css
@@ -58,3 +58,7 @@ linearGradient {
 .swiper-button-prev::after {
   color: green;
 }
+
+.swiper-pagination-bullet .swiper-pagination-bullet-active {
+  color: green;
+}
