add form pages (login, signup and password reset modals)

--- a/Latent-FrontEnd/src/index.css
+++ b/Latent-FrontEnd/src/index.css
@@ -62,3 +62,13 @@ linearGradient {
 .swiper-pagination-bullet .swiper-pagination-bullet-active {
   color: green;
 }
+
+/* forms error handling */
+
+input:invalid[focused="true"]{
+  border: 1px solid red;
+}
+
+input:invalid[focused="true"] ~ span{
+  display: block;
+}
